--- a/angular/bower.json
+++ b/angular/bower.json
@@ -18,6 +18,7 @@
     "bower": "*",
     "install": "~1.0.4",
     "ui-select": "angular-ui-select#~0.13.2",
-    "ng-flow": "~2"
+    "ng-flow": "~2",
+    "angular-local-storage": "~0.2.3"
   }
 }
