--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,15 @@
     "jsonwebtoken": "^5.4.1",
     "moment": "^2.10.6",
     "mongoose": "^4.3.1",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "nconf": "*",
+    "async": "*",
+    "winston": "*",
+    "dotenv": "*",
+    "change-case": "*",
+    "require-dir": "*",
+    "debug": "*",
+    "lodash": "*",
+    "redis": "*"
   }
 }
