--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "require-dir": "*",
     "debug": "*",
     "lodash": "*",
-    "redis": "*"
+    "redis": "*",
+    "express-jwt": "*",
+    "express-unless": "*"
   }
 }
