--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,8 @@
     "node-uuid":"*",
     "socket.io":"*",
     "http":"*",
-    "cors":"*"
+    "cors":"*",
+    "request":"*",
+    "q":"*"
   }
 }
